--- a/src/app/wall/post-list/post/post.component.css
+++ b/src/app/wall/post-list/post/post.component.css
@@ -6,11 +6,21 @@
   margin-bottom: 15px;
   border-radius: var(--border-radius);
   background-color: var(--frontground-back-color);
+  border: 1px solid var(--background-dark-color);
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   position: relative;
+}
+
+.post {
+  cursor: pointer;
+}
+
+.post span,
+.post h2 {
+  cursor: initial;
 }
 
 .upvote-bar {
@@ -52,7 +62,7 @@ mat-icon {
   background-color: var(--frontground-color);
   width: calc(100% - var(--upvote-bar-width));
   border-radius: 0 var(--border-radius) var(--border-radius) 0;
-  padding: var(--border-radius) var(--border-radius) 0 var(--border-radius);
+  padding: var(--border-radius) calc(2 * var(--border-radius)) 0 calc(2 * var(--border-radius));
 }
 
 .metadata {
@@ -61,6 +71,7 @@ mat-icon {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  color: var(--frontground-text-secondary-color);
 }
 
 .metadata>* {
@@ -105,6 +116,11 @@ mat-icon {
   height: calc(1.75 * var(--font-size-post-metadata));
   background-color: black;
   border-radius: 100%;
+}
+
+.sub-name {
+  font-weight: var(--fw-medium);
+  color: var(--frontground-text-color);
 }
 
 .footer {
