--- a/src/assets/fonts/custom_fonts.css
+++ b/src/assets/fonts/custom_fonts.css
@@ -1,3 +1,11 @@
+:root {
+  --fw-thin: 100;
+  --fw-light: 300;
+  --fw-normal: 400;
+  --fw-medium: 500;
+  --fw-bold: 700;
+}
+
 /* Thin */
 @font-face {
   font-family: Roboto;
