Post details and comments started

--- a/src/app/content/main-page-layout/main-page-layout.component.html
+++ b/src/app/content/main-page-layout/main-page-layout.component.html
@@ -1,2 +1,5 @@
 <app-banner></app-banner>
-<app-wall></app-wall>
+<div class="wall">
+  <post-list></post-list>
+  <wall-sidebar></wall-sidebar>
+</div>
