--- a/src/app/content/post-detail-layout/post-detail-layout.component.html
+++ b/src/app/content/post-detail-layout/post-detail-layout.component.html
@@ -1,2 +1,5 @@
 <app-banner></app-banner>
-<app-wall></app-wall>
+<div class="wall">
+  <post-detail></post-detail>
+  <wall-sidebar></wall-sidebar>
+</div>
