--- a/src/app/wall/post-list/post-create/post-create.component.html
+++ b/src/app/wall/post-list/post-create/post-create.component.html
@@ -1,4 +1,4 @@
-<div class="post-create">
+<div class="post-create container">
   <form [formGroup]="postCreateForm">
     <!-- <label for="title"></label>
     <input type="text" id="title" placeholder="Title" formControlName="title" /> -->
