--- a/src/app/wall/post-detail/post-detail.component.css
+++ b/src/app/wall/post-detail/post-detail.component.css
@@ -105,3 +105,7 @@ mat-icon {
   font-weight: var(--fw-medium);
   color: var(--frontground-text-color);
 }
+
+.comments {
+  padding: calc(2 * var(--border-radius));
+}
