--- a/src/app/wall/post-list/post/post.component.html
+++ b/src/app/wall/post-list/post/post.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="content">
     <div class="metadata">
-      <a class="sub-image"></a>
+      <a class="sub-image" [routerLink]="'/'+post.subreddit"></a>
       <a class="sub-name" [routerLink]="'/'+post.subreddit">{{post.subreddit}}</a>
       <span>|</span>
       <span>Posted by <a [routerLink]="'/'+post.author">{{post.author}}</a></span>
