--- a/src/app/wall/comment/comment.component.html
+++ b/src/app/wall/comment/comment.component.html
@@ -1,3 +1,23 @@
-<p>{{comment.author.name}}</p>
-<p>{{comment.text}}</p>
-<p>Answers: {{comment.answers.length}}</p>
+<div class="comment">
+  <a class="header" *ngIf="comment.author; else emptyAuthor">
+    <img [src]="comment.author.avatarUrl" [alt]="comment.author.name" class="author-avatar" />
+    <span class="author-name">{{comment.author.name}}</span>
+  </a>
+  <ng-template #emptyAuthor>
+    <a class="header header-empty">
+      <div class="author-avatar"></div>
+      <span class="author-name">[deleted]</span>
+    </a>
+  </ng-template>
+  <div class="body">
+    <span class="divider"></span>
+    <div class="content">
+      <div class="text">{{comment.text}}</div>
+      <div class="footer">
+        Footer
+      </div>
+      <p>Answers: {{comment.answers.length}}</p>
+      <comment *ngFor="let answer of comment.answers" [comment]="answer"></comment>
+    </div>
+  </div>
+</div>
