--- a/src/app/wall/post-list/post/post.component.html
+++ b/src/app/wall/post-list/post/post.component.html
@@ -1,10 +1,10 @@
 <div class="post" (click)="postClicked($event)" (mousedown)="postMouseDown($event)">
   <div class="upvote-bar">
-    <button mat-icon-button>
+    <button mat-icon-button (click)="onUpvote()">
       <mat-icon class="upvote" svgIcon="arrow_up" [inline]="true" [color]="'primary'"></mat-icon>
     </button>
     <span id="votes">99.9k</span>
-    <button mat-icon-button>
+    <button mat-icon-button (click)="onDownvote()">
       <mat-icon class="downvote" svgIcon="arrow_down" [inline]="true"></mat-icon>
     </button>
     <!-- 
