--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-  <div class="reddit_logo">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="reddit_logo_pic">
+  <div class="reddit-logo">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="reddit-logo-pic">
       <g>
         <circle fill="#FF4500" cx="10" cy="10" r="10"></circle>
         <path fill="#FFF"
@@ -8,17 +8,17 @@
         </path>
       </g>
     </svg>
-    <span class="reddit_logo_name">reddit</span>
+    <span class="reddit-logo-name">reddit</span>
   </div>
   <span class="dropdown">dropdown</span>
   <span class="searchbar">searchbar</span>
-  <div class="user_div">
+  <div class="user-div">
     <img
       src="https://styles.redditmedia.com/t5_pr9ac/styles/profileIcon_y2e0t2edolr11.jpg?width=256&height=256&crop=256:256,smart&s=304df3d6d2437676b37c9f4268815d2b087a924c"
-      alt="Profile pic" class="user_pic" />
-    <div class="user_data">
-      <span class="user_name">Darco</span>
-      <span class="user_karma">213 karma</span>
+      alt="Profile pic" class="user-pic" />
+    <div class="user-data">
+      <span class="user-name">Darco</span>
+      <span class="user-karma">213 karma</span>
     </div>
   </div>
 </div>
