--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,12 @@ body {
   font-weight: 400;
 }
 
+app-root,
+app-root>*:nth-child(2) {
+  height: 100%;
+  display: block;
+}
+
 img {
   display: block;
 }
