--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -50,6 +50,10 @@
   align-items: center;
 }
 
+.user-div button {
+  margin: 0 8px;
+}
+
 .user-data {
   display: flex;
   flex-direction: column;
