Post create redone

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
   --font-size-comment-metadata: 14px;
   --border-radius: 5px;
   --upvote-bar-width: 36px;
+  --mat-field-bottom-padding: 1.34375em;
   --background-color: #DDD;
   --background-dark-color: #CCC;
   --frontground-color: #FFF;
