--- a/src/app/subreddit/post-list/post-list.component.html
+++ b/src/app/subreddit/post-list/post-list.component.html
@@ -1,5 +1,5 @@
 <div class="post-list">
-  <post-create></post-create>
+  <post-create-simple *ngIf="!!getUser()"></post-create-simple>
   <post-filter></post-filter>
   <app-post *ngFor="let post of posts" [post]="post"></app-post>
 </div>
