--- a/src/app/submit/submit-layout/submit-layout.component.html
+++ b/src/app/submit/submit-layout/submit-layout.component.html
@@ -1,1 +1,5 @@
-<p>submit-layout works!</p>
+<app-header></app-header>
+<div class="wall">
+  <post-create></post-create>
+  <wall-sidebar></wall-sidebar>
+</div>
