--- a/src/assets/fonts/custom_fonts.css
+++ b/src/assets/fonts/custom_fonts.css
@@ -80,3 +80,21 @@
   font-style: italic;
   font-weight: 700;
 }
+
+@font-face {
+  font-family: "YouTube Sans";
+  src: url("https://fonts.gstatic.com/s/youtubesans/v16/Qw38ZQNGEDjaO2m6tqIqX5E-AVS5_rSejo46_PCTRspJ0OosolrBEJL3HO_T7fE.woff2") format("woff2");
+  font-style: normal;
+  font-weight: 300 900;
+  font-display: swap;
+  unicode-range: U+0-FF, U+131, U+152-153, U+2BB-2BC, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "YouTube Sans";
+  src: url("https://fonts.gstatic.com/s/youtubesans/v16/Qw38ZQNGEDjaO2m6tqIqX5E-AVS5_rSejo46_PCTRspJ0OosolrBEJL3HO_d7fH6Cg.woff2") format("woff2");
+  font-style: normal;
+  font-weight: 300 900;
+  font-display: swap;
+  unicode-range: U+100-24F, U+259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
