Fixed loading objects from strings when GETting data

--- a/src/app/post-detail/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail/post-detail.component.html
@@ -17,7 +17,7 @@
       <a class="sub-name" [routerLink]="post ? '/'+getSubredditName() : null">{{getSubredditName()}}</a>
       <span>|</span>
       <span>Posted by <a [routerLink]="post ? '/'+getUserName() : null">{{getUserName()}}</a></span>
-      <span *ngIf="!!post">{{post.timeCreated.toISOString() | timePast}}</span>
+      <span *ngIf="!!post">{{getTimeCreated() | timePast}}</span>
       <span *ngIf="!post">now</span>
     </div>
     <div>
