--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,8 @@ h2 {
   font-family: var(--font-title) !important;
   font-weight: bold !important;
   font-size: var(--font-size-h2) !important;
+  line-height: 1em !important;
+  margin: 8px 0 16px 0 !important;
 }
 
 /* app-root,
