--- a/src/app/post-detail/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail/post-detail.component.html
@@ -1,11 +1,15 @@
 <div class="post-detail container">
   <div class="upvote-bar">
-    <button mat-icon-button>
-      <mat-icon class="upvote" svgIcon="arrow_up" [inline]="true" [color]="'primary'"></mat-icon>
+    <button mat-icon-button (click)="onUpvote()">
+      <mat-icon class="upvote" [class.upvoted]="vote === voteTypes.UPVOTE" svgIcon="arrow_up" [inline]="true"
+        [color]="vote === voteTypes.UPVOTE ? 'primary' : null"></mat-icon>
     </button>
-    <span id="votes">99.9k</span>
-    <button mat-icon-button>
-      <mat-icon class="downvote" svgIcon="arrow_down" [inline]="true"></mat-icon>
+    <span id="votes" [class.upvoted]="vote === voteTypes.UPVOTE" [class.downvoted]="vote === voteTypes.DOWNVOTE"
+      [innerText]="voteNumber"></span>
+    <button mat-icon-button (click)="onDownvote()">
+      <mat-icon class="downvote" [class.downvoted]="vote === voteTypes.DOWNVOTE" svgIcon="arrow_down" [inline]="true"
+        [color]="vote === voteTypes.DOWNVOTE ? 'warn' : null">
+      </mat-icon>
     </button>
     <!-- 
     <div class="upvote">^</div>
