--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -1,7 +1,7 @@
 // @import '~@angular/material/_theming.scss';
 @import 'node_modules/@angular/material/_theming.scss';
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 $custom-typography: mat-typography-config($font-family: var(--font-default));
 @include mat-core($custom-typography);
 
