--- a/src/app/subreddit/post/post.component.html
+++ b/src/app/subreddit/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="post" (click)="postClicked($event)" (mousedown)="postMouseDown($event)">
+<div class="post">
   <div class="upvote-bar">
     <button mat-icon-button (click)="onUpvote()">
       <mat-icon class="upvote" [class.upvoted]="vote === voteTypes.UPVOTE" svgIcon="arrow_up" [inline]="true"
@@ -15,13 +15,14 @@
     <div class="upvote">^</div>
     <div class="downvote">v</div> -->
   </div>
-  <div class="content">
+  <div class="content" (click)="postClicked($event)" (mousedown)="postMouseDown($event)">
     <div class="metadata">
       <a class="sub-image" [routerLink]="'/'+getSubredditName()"></a>
       <a class="sub-name" [routerLink]="'/'+getSubredditName()">{{getSubredditName()}}</a>
       <span>|</span>
       <span>Posted by <a [routerLink]="'/'+getUserName()">{{getUserName()}}</a></span>
-      <span>5 min ago</span>
+      <span *ngIf="!!post">{{getTimeCreated() | timePast}}</span>
+      <span *ngIf="!post">now</span>
     </div>
     <div>
       <h2 class="post-title">{{post.title}}</h2>
@@ -31,7 +32,7 @@
     </div>
     <div *ngIf="post.images && post.images.length > 0">
       <img class="post-image" [src]="post.images[0].url" [alt]="post.images[0].title">
-      <div class="post-image-title">{{post.images[0].title}}</div>
+      <div class="post-image-title" *ngIf="!!post.images[0].title">{{post.images[0].title}}</div>
     </div>
     <div class="footer">
       <button mat-button (click)="navigateToDetails()">0 Comments</button>
